--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "perfect-dark-pro",
   "displayName": "Perfect Dark Pro",
   "description": "Perfect Dark Pro Theme",
-  "version": "1.0.0",
+  "icon": "themes/theme_images/logo.png",
+  "version": "1.1.0",
   "publisher": "YunxiJiang",
   "repository": {
     "type": "git",
